# ConcordanceChallenge

./: .gitignore  CMakeLists.txt  ConcordanceChallenge.code-workspace  README.md  boot.py
exec/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Concordance.cpp  OutputFormattings.cpp  TextDocumentTraveller.cpp  WordSanitizer.cpp  WordValidator.cpp
src/include/: Concordance.hpp  OutputFormattings.hpp  Singleton.hpp  TextDocumentTraveller.hpp  WordSanitizer.hpp  WordValidator.hpp
tests/: CMakeLists.txt  ConcordanceTest.cpp  OutputFormattingsTest.cpp  SingletonTest.cpp  TextDocumentTravellerTest.cpp  WordSanitizerTest.cpp  WordValidatorTest.cpp
